#
# Copyright (C) 2003-2023 Sébastien Helleu <flashcode@flashtux.org>
#
# This file is part of WeeChat, the extensible chat client.
#
# WeeChat is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# WeeChat is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with WeeChat.  If not, see <https://www.gnu.org/licenses/>.
#

EXTRA_DIST = 16x16/weechat.png \
             32x32/weechat.png \
             64x64/weechat.png \
             128x128/weechat.png \
             256x256/weechat.png \
             512x512/weechat.png

icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon64dir = $(datadir)/icons/hicolor/64x64/apps
icon128dir = $(datadir)/icons/hicolor/128x128/apps
icon256dir = $(datadir)/icons/hicolor/256x256/apps
icon512dir = $(datadir)/icons/hicolor/512x512/apps

icon16_DATA = 16x16/weechat.png
icon32_DATA = 32x32/weechat.png
icon64_DATA = 64x64/weechat.png
icon128_DATA = 128x128/weechat.png
icon256_DATA = 256x256/weechat.png
icon512_DATA = 512x512/weechat.png
